tests/compile_fail/arc_self.stderr
error: Arbitrary self types like `Arc<Self>` or `Box<Self>` are not supported. Use `self`, `&self`, or `&mut self` instead.
  --> tests/compile_fail/arc_self.rs:11:25
   |
11 |         fn method(self: Arc<Self>);
   |                         ^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> tests/compile_fail/arc_self.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
